Policy Cilium l3-4/recommendation-policy-lv34.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "rule-rec-lv34"
spec:
  description: "L3-L4 policy for the recommandation service"
  endpointSelector:
    matchLabels:
      app: recommendationservice
  ingress:
  - fromEndpoints:
    - matchLabels:
        app: frontend
    toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
  egress:
  - toEndpoints:
    - matchLabels:
        app: productcatalogservice
    toPorts:
    - ports:
      - port: "3550"
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": kube-system
        "k8s:k8s-app": kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: ANY
